[+] Include JS syntax highlighting

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
 
-    <link rel="stylesheet" href="prism-tomorrow-night.css">
-    <script src="prism-python.js"></script>
+    <link rel="stylesheet" href="prism-default.css">
+    <script src="prism-js-py.js"></script>
 </head>
 <body>
 <noscript>
